# DMRG-Transformer

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE_WORK.md  LICENSE  README.md  REVIEW.md  SECURITY.md  pyproject.toml
bench/: GATE3_PROOF.md  HEADLINE.md  PARETO.md  POC_RESULTS.md  README.md  REAL_WORLD_LIN_TT_BLOCK.md  REAL_WORLD_MNIST.md  REAL_WORLD_TT_BLOCK.md  RESULTS.md  RESULTS.txt  TEST_OUTPUT.txt
bench/_coverage/: tier1_mlp.json  tier2_one_block.json  tier2_one_block_linear.json
docs/: ARCHITECTURE.md  BENCHMARK.md  BLUEPRINT.md  COMPLIANCE.md  MEMORY_ARENA.md  NUMERICAL_STABILITY.md  SOLVER_MATH.md  TENSOR_TOPOLOGY.md
scripts/: check.ps1  detect_cuda.py  poc_linear_transformer.py  poc_softmax_transformer.py  poc_tt_mlp.py  run_benchmarks.py  run_coverage_matrix.py  run_gate3_proof.py  run_headline_benchmark.py  run_iso_rank_benchmark.py  run_pareto.py  run_poc_benchmark.py  train_real_world_classifier.py  train_real_world_tt_block_classifier.py
src/dmrg_transformer/: __init__.py
src/dmrg_transformer/bench/: __init__.py  _instrumentation.py  benchmark.py
src/dmrg_transformer/core/: __init__.py  arena.py  device.py  interfaces.py  precision.py  qr.py  svd.py
src/dmrg_transformer/nn/: __init__.py  embeddings.py  tt_block.py  tt_ffn.py  tt_linear.py  tt_linear_attention.py  tt_linear_attention_block.py  tt_mha.py
src/dmrg_transformer/optim/: __init__.py  local_solver.py  sweep.py
src/dmrg_transformer/propagation/: __init__.py  target_propagator.py
src/dmrg_transformer/tt/: __init__.py  environments.py  gauge.py  tensor_train.py
tests/: conftest.py  test_adaptive_rank.py  test_adaptive_rank_wiring.py  test_benchmark_iso_rank.py  test_benchmark_smoke.py  test_constraints.py  test_gate1_reconstruction.py  test_gate2_orthogonality.py  test_gate3_exact_parity.py  test_jacobian_sanity.py  test_matrix_free_regression.py  test_matrix_free_solver.py  test_memory_arena.py  test_mha_consistency.py  test_numerical_stability.py  test_real_world_classifier.py  test_real_world_tt_block_classifier.py  test_real_world_tt_block_depth2_blend.py  test_real_world_tt_block_script_output.py  test_svd_fallback.py  test_target_propagation_cascade.py  test_target_propagator_extensions.py  test_tt_block.py  test_tt_block_stacked_end_to_end.py  test_tt_ffn.py  test_tt_forward.py  test_tt_linear_attention_block_dmrg.py  test_tt_linear_attention_forward.py  test_tt_linear_dropin.py  test_ttblock_ln_affine.py
