[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "dmrg-transformer"
version = "0.1.0"
description = "Exact-solver Tensor-Train DMRG optimizer for Transformer-style architectures (no gradients)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "DMRG-Transformer Authors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
dmrg-bench = "dmrg_transformer.bench.benchmark:execute"

[tool.hatch.build.targets.wheel]
packages = ["src/dmrg_transformer"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["N803", "N806"]  # mathematical names (W, X, Y, U, S, Vh, L, R, G) are intentional.

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["dmrg_transformer"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["scipy.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: long-running benchmarks and end-to-end checks",
]
